2003-05-25  Sam Steingold  <sds@gnu.org>

	* constobj.d (type_packname): include CHARACTER, as per ANSI spec
	* charstrg.d (test_radix_arg, test_char_args)
	(test_char_args_upcase, test_stringsymchar_arg): recoverable
	avoid dotimes*() macro throughout the file

2003-05-24  Sam Steingold  <sds@gnu.org>

	* hashtabl.d (HASH-TABLE-COUNT): rehash the argument when it is
	weak and invalid because GC could reduce the count

2003-05-24  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out): handle hash tables

2003-05-24  Sam Steingold  <sds@gnu.org>

	* hashtabl.d (rehash): fixed an "off by one" bug in user-defined HTs
	(hash_lookup): fixed a GC-safety bug in user-defined HTs

2003-05-24  Sam Steingold  <sds@gnu.org>

	* pathname.d (stringlist_to_asciizlist): always defined;
	fixed GC-safety errors
	(LAUNCH): return NIL when :WAIT was NIL
	[UNIX/RISCOS]: fixed GC-safety errors; handle :PRIORITY argument
	* unixconf.h.in (HAVE_NICE): added
	* configure.in: check for nice(2)

2003-05-24  Sam Steingold  <sds@gnu.org>

	* error.d (check_list): new function
	* lispbibl.d (check_list): declare

2003-05-24  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	Concerning the CLHS/Win32 issue.
	* pathname.d (shell_quote): removed source_end parameter.
	(stringlist_to_asciizlist) [WIN32_NATIVE]: new function.
	(LAUNCH) [WIN32_NATIVE,UNIX/RISCOS]: use it.
	(SHELL-EXECUTE): new function - a wrapper for ShellExecute.
	Shell means GUI shell, not the command.com.
	* constsym.d: declared SHELL-EXECUTE in EXT.
	* subr.d: ditto.
	* win32.d: include <shellapi.h>
	* makemake.in: link against shell32.lib
	* clhs.lisp (browse-url) [WIN32]: start default browser by default.

2003-05-24  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* spvw_sigsegv.d (stackoverflow_handler): fixed MSVC compilation.

2003-05-22  Bruno Haible  <bruno@clisp.org>

	* spvw_sigsegv.d (stackoverflow_handler): Add support for restoring
	STACK on hppa-hpux, alpha-freebsd, i386-openbsd, alpha-netbsd.
